- Fixed bug #47816 (pcntl tests failing on NetBSD) # Tests will still fail until a few kernel bugs are fixed